swagger and http error refactorings.
