# app/wallet/handler.go
@@ -3,6 +3,7 @@ package wallet
 import (
 	"context"
 	"github.com/eneskzlcn/currency-conversion-service/app/common"
+	"github.com/eneskzlcn/currency-conversion-service/app/common/httperror"
 	"github.com/gofiber/fiber/v2"
 	"go.uber.org/zap"
 )
@@ -30,23 +31,24 @@ func NewHandler(service WalletService, guard AuthGuard, logger *zap.SugaredLogge
 //GetUserWalletAccounts godoc
 //@Summary Shows user wallet accounts
 //@Description shows user wallet accounts for all existing currency
+// @Tags Wallet
 //@Accept  json
 //@Produce  json
 //@Param accessToken header string true "header params"
 //@Success 200 {object} UserWalletAccountsResponse
-//@Failure 400
+//@Failure 400 {object} httperror.HttpError
 //@Failure 404
 //@Failure 401 {string} string "Unauthorized"
-//@Failure 500
+//@Failure 500 {object} httperror.HttpError
 //@Router /wallets [get]
 func (h *Handler) GetUserWalletAccounts(ctx *fiber.Ctx) error {
 	userID, exists := ctx.Locals(common.USER_ID_CTX_KEY).(int)
 	if !exists {
-		return ctx.SendStatus(fiber.StatusBadRequest)
+		return ctx.Status(fiber.StatusBadRequest).JSON(httperror.NewBadRequestError(common.UserNotInContext))
 	}
 	userWalletAccounts, err := h.walletService.GetUserWalletAccounts(ctx.Context(), userID)
 	if err != nil {
-		return ctx.SendStatus(fiber.StatusInternalServerError)
+		return ctx.Status(fiber.StatusInternalServerError).JSON(httperror.NewInternalServerError(err.Error()))
 	}
 	return ctx.Status(fiber.StatusOK).JSON(userWalletAccounts)
 }
